--- a/index.html
+++ b/index.html
@@ -1,36 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python Quick Tip Short Video</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Why Python for Today and the Future - Video Guide</title>
+  <meta name="description" content="Learn why Python is powerful today and will remain essential in the future. In-depth video on Python’s strengths and future trends.">
 
-    <!-- Video structured data for Google -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "VideoObject",
-      "name": "Python Quick Tip Short Video",
-      "description": "Learn this quick Python tip in under 60 seconds! Improve your Python skills fast.",
-      "thumbnailUrl": "https://i.ytimg.com/vi/t2Kg5x3ixIU/hqdefault.jpg",
-      "uploadDate": "2026-01-21",
-      "contentUrl": "https://github.com/YOURUSERNAME/PythonShortTips2",
-      "embedUrl": "https://www.youtube.com/embed/t2Kg5x3ixIU"
+  <!-- Video structured data for Google -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "VideoObject",
+    "name": "Why Python for Today and the Future",
+    "description": "Learn why Python remains a powerful language today and will continue to be essential in the future.",
+    "thumbnailUrl": "https://i.ytimg.com/vi/t2Kg5x3ixIU/hqdefault.jpg",
+    "uploadDate": "2026-01-21",
+    "contentUrl": "https://codegururealcodeguru-art.github.io/why-python-for-today-and-future/",
+    "embedUrl": "https://www.youtube.com/embed/t2Kg5x3ixIU"
+  }
+  </script>
+
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 20px;
+      line-height: 1.6;
+      background-color: #f4f7f6;
+      color: #333;
     }
-    </script>
+
+    header {
+      background: linear-gradient(135deg, #FFD43B, #306998);
+      color: #fff;
+      text-align: center;
+      padding: 40px 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      margin: 0;
+    }
+
+    header p {
+      font-size: 1.2em;
+      opacity: 0.95;
+      margin-top: 10px;
+    }
+
+    main {
+      text-align: center;
+    }
+
+    iframe {
+      width: 80%;
+      max-width: 900px;
+      height: 500px;
+      border: none;
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 50px;
+      padding: 20px;
+      font-size: 0.9em;
+      color: #7f8c8d;
+      border-top: 1px solid #eee;
+    }
+  </style>
 </head>
 <body>
-    <header style="text-align:center; padding: 30px; background: #306998; color:white;">
-        <h1>Python Quick Tip Short Video</h1>
-        <p>Learn this Python tip in under 60 seconds!</p>
-    </header>
 
-    <main style="text-align:center; margin-top: 40px;">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/t2Kg5x3ixIU" frameborder="0" allowfullscreen></iframe>
-    </main>
+<header>
+  <h1>Why Python for Today and the Future</h1>
+  <p>Learn why Python remains a powerful language today and essential for the future.</p>
+</header>
 
-    <footer style="text-align:center; margin-top:50px; padding:20px; color:#7f8c8d; border-top:1px solid #eee;">
-        &copy; 2026 Python Quick Tips. All rights reserved.
-    </footer>
+<main>
+  <iframe src="https://www.youtube.com/embed/t2Kg5x3ixIU" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+</main>
+
+<footer>
+  &copy; 2026 CodeGuru RealCodeGuru. All rights reserved.
+</footer>
+
 </body>
 </html>
