--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- SEO META -->
 <meta name="description" content="Why Python for today and the future. Learn how Python powers AI, automation, and high-paying careers.">
+<section>
+    <h2>📺 Watch the Video</h2>
+    <iframe 
+        width="100%" 
+        height="450"
+        src="https://www.youtube.com/embed/t2Kg5x3ixIU"
+        title="Why Python for Today and the Future"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+        style="border-radius:12px;">
+    </iframe>
+</section>
 
 <!-- Video Structured Data -->
 <script type="application/ld+json">
