--- a/index.html
+++ b/index.html
@@ -175,6 +175,23 @@
         style="border-radius:12px;">
     </iframe>
 </section>
+<section style="text-align:center;">
+    <h2>❤️ Support the Channel</h2>
+    <p>If this video helped you, don’t forget to Like, Share & Subscribe!</p>
+
+    <!-- Subscribe Button -->
+    <a href="https://www.youtube.com/@realcodeguru" target="_blank">
+        <button style="background:#ff0000;">🔔 Subscribe on YouTube</button>
+    </a>
+
+    <br><br>
+
+    <!-- Share Buttons -->
+    <p><strong>Share this video:</strong></p>
+    <a href="https://wa.me/?text=Watch%20this%20amazing%20Python%20video%20https://youtu.be/t2Kg5x3ixIU" target="_blank">📲 WhatsApp</a> |
+    <a href="https://www.facebook.com/sharer/sharer.php?u=https://youtu.be/t2Kg5x3ixIU" target="_blank">📘 Facebook</a> |
+    <a href="https://twitter.com/intent/tweet?url=https://youtu.be/t2Kg5x3ixIU&text=Why%20Python%20is%20the%20Language%20of%20Tomorrow" target="_blank">🐦 Twitter</a>
+</section>
 
 <div class="intro-box">
     <p>Have you ever wondered why Python is almost always the first language people recommend for beginners? I chose Python because it looked simple. But over time, I realized it's not just beginner-friendly—it's actually shaping the future of tech.</p>
