--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- SEO META -->
 <meta name="description" content="Why Python for today and the future. Learn how Python powers AI, automation, and high-paying careers.">
-
+<meta name="google-site-verification" content="iDwV5Ei9s01izlgMvplTMSHu6CTNcFmRvM0bmYpdgJw" />
 
 <!-- Video Structured Data -->
 <script type="application/ld+json">
