--- a/index.html
+++ b/index.html
@@ -15,10 +15,20 @@
   "description": "Learn why Python remains powerful today and essential for the future.",
   "thumbnailUrl": "https://i.ytimg.com/vi/t2Kg5x3ixIU/hqdefault.jpg",
   "uploadDate": "2026-01-21",
+  "duration": "PT5M",
   "embedUrl": "https://www.youtube.com/embed/t2Kg5x3ixIU",
-  "contentUrl": "https://codegururealcodeguru-art.github.io/why-python-for-today-and-future/"
+  "contentUrl": "https://codegururealcodeguru-art.github.io/why-python-for-today-and-future/",
+  "publisher": {
+    "@type": "Organization",
+    "name": "CodeGuru RealCodeGuru",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://i.imgur.com/8Km9tLL.png"
+    }
+  }
 }
 </script>
+
 
     <title>Why Python is the Language of Tomorrow - Legit Python Mirror</title>
     <style>
@@ -155,13 +165,24 @@
             URL.revokeObjectURL(url);
         }
     </script>
-</head> 
+</head>  <section style="margin:30px 0;">
+  <iframe 
+    width="100%" 
+    height="450"
+    src="https://www.youtube.com/embed/t2Kg5x3ixIU"
+    title="Why Python for Today and the Future"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</section>
+
 <body>
 
 <header>
     <h1>Why Python is the Language of Tomorrow</h1>
     <p>Why Learning Python Today Sets You Up for Tomorrow</p>
-</header>
+</header> 
 <section>
     <h2>📺 Watch the Video</h2>
     <iframe 
