--- a/index.html
+++ b/index.html
@@ -165,7 +165,17 @@
             URL.revokeObjectURL(url);
         }
     </script>
-</head>  <section style="margin:30px 0;">
+</head> <section style="margin-bottom:30px;">
+  <iframe 
+    width="100%" 
+    height="480"
+    src="https://www.youtube.com/embed/t2Kg5x3ixIU"
+    title="Why Python for Today and the Future"
+    loading="lazy"
+    allowfullscreen>
+  </iframe>
+</section>
+ <section style="margin:30px 0;">
   <iframe 
     width="100%" 
     height="450"
@@ -183,8 +193,10 @@
     <h1>Why Python is the Language of Tomorrow</h1>
     <p>Why Learning Python Today Sets You Up for Tomorrow</p>
 </header> 
-<section>
-    <h2>📺 Watch the Video</h2>
+<section> 
+    <h2>📺 Watch the Video</h2> <h2>Watch: Why Python for Today and the Future</h2>
+<p>This video explains why Python dominates AI, automation, and future careers.</p>
+
     <iframe 
         width="100%" 
         height="450"
